--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,11 @@
 .App {
   text-align: center;
 }
+h1 {
+  font-family: 'Bigelow Rules';
+  font-size: 72px;
+  color: rgb(0, 140, 255);
+}
 
 .App-logo {
   height: 40vmin;
